--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Modern Login Page | AsmrProg</title>
+    <link rel="stylesheet" href="login.css">
+    <title> Login Page | PBLTatibSystem  </title>
 </head>
 
 <body>
@@ -17,7 +17,8 @@
                 <h1>Create Account</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
-                
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <span>or use your email for registeration</span>
                 <input type="text" placeholder="Name">
@@ -31,7 +32,8 @@
                 <h1>Sign In</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google"></i></i></a>
-                   
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <span>or use your email password</span>
                 <input type="email" placeholder="Email">
@@ -49,14 +51,14 @@
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Students!</h1>
-                    <p>Register with your personal details to use all of the experience</p>
+                    <p>Welcome to PBLSistemTatib! Please register with your personal details </p>
                     <button class="hidden" id="register">Sign Up</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scriptlogin.js"></script>
 </body>
 
 </html>
