--- a/Frontend/Dashboard.html
+++ b/Frontend/Dashboard.html
@@ -26,13 +26,13 @@
 
 			</li>
 			<li>
-				<a href="#">
+				<a href="Archive.html">
 					<i class='bx bx-bookmark'></i></i>
 					<span class="text">Archive</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="Compensatiton.html">
 					<i class='bx bxs-doughnut-chart' ></i>
 					<span class="text">Compentation</span>
 				</a>
@@ -64,12 +64,6 @@
 				</a>
 			</li>
 		</ul>
-		<div class="ads">
-			<div class="wrapper">
-				<a href="#" class="btn-upgrade">Save</a>
-				<p>Save your <span>DATA</span> safely and enjoy <span>All Features</span></p>
-			</div>
-		</div>
 	</section>
 	<!-- SIDEBAR -->
 
@@ -100,6 +94,7 @@
 		</nav>
 		<!-- NAVBAR -->
 		<main>
+			<div id="dashboard-content" class="content active">
 			<div class="head-title">
 				<div class="left">
 					<h1>Dashboard</h1>
@@ -123,15 +118,15 @@
 				<li>
 					<i class='bx bx-user-pin'></i>
 					<span class="text">
-						<h3>1020</h3>
-						<p>Students</p>
+						<h3>10</h3>
+						<p>Sick</p>
 					</span>
 				</li>
 				<li>
 					<i class='bx bxs-group' ></i>
 					<span class="text">
-						<h3>2834</h3>
-						<p>Visitors</p>
+						<h3>2</h3>
+						<p>Absence</p>
 					</span>
 				</li>
 				<li>
@@ -142,6 +137,97 @@
 					</span>
 				</li>
 			</ul>
+
+			<div class="table-data">
+				<div class="order">
+					<div class="head">
+						<h3>Recent Orders</h3>
+						<i class='bx bx-search' ></i>
+						<i class='bx bx-filter' ></i>
+					</div>
+					<table>
+						<thead>
+							<tr>
+								<th>User</th>
+								<th>Date Order</th>
+								<th>Status</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>
+									<img src="img/people.png">
+									<p>Erwan Majid</p>
+								</td>
+								<td>01-10-2021</td>
+								<td><span class="status completed">Completed</span></td>
+							</tr>
+							<tr>
+								<td>
+									<img src="img/people.png">
+									<p>Erwan Majid</p>
+								</td>
+								<td>01-10-2021</td>
+								<td><span class="status pending">Pending</span></td>
+							</tr>
+							<tr>
+								<td>
+									<img src="img/people.png">
+									<p>Erwan Majid</p>
+								</td>
+								<td>01-10-2021</td>
+								<td><span class="status process">Process</span></td>
+							</tr>
+							<tr>
+								<td>
+									<img src="img/people.png">
+									<p>Erwan Majid</p>
+								</td>
+								<td>01-10-2021</td>
+								<td><span class="status pending">Pending</span></td>
+							</tr>
+							<tr>
+								<td>
+									<img src="img/people.png">
+									<p>Erwan Majid</p>
+								</td>
+								<td>01-10-2021</td>
+								<td><span class="status completed">Completed</span></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div class="todo">
+					<div class="head">
+						<h3>Todos</h3>
+						<i class='bx bx-plus' ></i>
+						<i class='bx bx-filter' ></i>
+					</div>
+					<ul class="todo-list">
+						<li class="completed">
+							<p>Todo List</p>
+							<i class='bx bx-dots-vertical-rounded' ></i>
+						</li>
+						<li class="completed">
+							<p>Todo List</p>
+							<i class='bx bx-dots-vertical-rounded' ></i>
+						</li>
+						<li class="not-completed">
+							<p>Todo List</p>
+							<i class='bx bx-dots-vertical-rounded' ></i>
+						</li>
+						<li class="completed">
+							<p>Todo List</p>
+							<i class='bx bx-dots-vertical-rounded' ></i>
+						</li>
+						<li class="not-completed">
+							<p>Todo List</p>
+							<i class='bx bx-dots-vertical-rounded' ></i>
+						</li>
+					</ul>
+				</div>
+			</div>
+			
 		</main>
 	</section>
 	<!-- CONTENT -->
