--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -32,8 +32,8 @@
                     <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="password" name="password" placeholder="Password" required>
+                <input type="email" id="email" name="email" placeholder="Email" required>
+                <input type="password" id="password" name="password" placeholder="Password" required>
                 <a href="#">Forget Your Password?</a>
                 <button type="submit">Sign In</button>
             </form>
